--- a/.htaccess
+++ b/.htaccess
@@ -1,49 +1,16 @@
-RewriteEngine on
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME}\index.html -f
-RewriteRule ^(.*)$ $1index.html
+RewriteEngine On
+RewriteBase /
 
-<Directory css>
-order allow, deny
-deny from all
-</Directory>
+RewriteCond %{REQUEST_FILENAME} !-d 
+RewriteRule ^(.*)\/(\?.*)?$ $1$2 [R=301,L]
 
-<Directory fonts>
-order allow, deny
-deny from all
-</Directory>
+RewriteCond %{REQUEST_FILENAME} !-f 
+RewriteCond %{REQUEST_FILENAME} !-d 
+RewriteRule ^([^\.]+)$ $1.html [NC,L]
 
-<Directory js>
-order allow, deny
-deny from all
-</Directory>
+RewriteCond %{THE_REQUEST} ^[A-Z]{3,9}\ /index\.html\ HTTP/ 
+RewriteRule ^index\.html$ http://domain.com/ [R=301,L]
+RewriteCond %{THE_REQUEST} \.html 
+RewriteRule ^(.*)\.html$ /$1 [R=301,L]
 
-<Files .gitignore>
-order allow, deny
-deny from all
-</Files>
-
-<Files .htaccess>
-order allow, deny
-deny from all
-</Files>
-
-<Files .htaccess>
-order allow, deny
-deny from all
-</Files>
-
-<Files footer.html>
-order allow, deny
-deny from all
-</Files>
-
-<Files header.html>
-order allow, deny
-deny from all
-</Files>
-
-<Files snippets.html>
-order allow, deny
-deny from all
-</Files>
+ErrorDocument 404 /404/index.html
