--- a/.htaccess
+++ b/.htaccess
@@ -1,21 +1,6 @@
 <IfModule mod_rewrite.c>
-    RewriteEngine On
-    RewriteBase /
-
-    RewriteCond %{REQUEST_URI} !^/(js|css/.*)$
-
-    RewriteCond %{REQUEST_METHOD} !POST
-    RewriteCond %{THE_REQUEST} /index\.html [NC]
-    RewriteCond %{REQUEST_URI} ^(.*/)index\.html$ [NC]
-    RewriteRule ^ %1 [L,R=301,NE]
-
-    RewriteCond %{REQUEST_METHOD} !POST
-    RewriteCond %{THE_REQUEST} \s/+(.+?)\.html[\s?] [NC]
-    RewriteRule ^ /%1 [R=301,NE,L]
-
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteCond %{REQUEST_FILENAME}.html -f
-    RewriteRule ^([^.]+?)/?$ $1.html [L]
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule ^(.*)/$ /$1 [L,R] # <- for test, for prod use [L,R=301]
 </IfModule>
 
 ErrorDocument 404 /404/index.html
