--- a/.htaccess
+++ b/.htaccess
@@ -5,6 +5,6 @@
 
 RewriteEngine On
 RewriteCond %{HTTPS} on
-RewriteRule (.*) http://stream.njit.edu:8000/stream1.mp3 [R=301,L]
+RewriteRule (.*) http://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 
 ErrorDocument 404 /404/index.html
